Address review comments on the organization provisioning executor